# killer-metrics

./: .gitignore  .pre-commit-config.yaml  DASHBOARD_ASSESSMENT.md  LICENSE  Makefile  README.md  pyrightconfig.json
frontend/: .env.example  (+5 more)
metrics-backend/: .env.example  README.md  alembic.ini  pyproject.toml
metrics-backend/alembic/: __init__.py  env.py  script.py.mako
metrics-backend/alembic/versions/: 0001_create_metrics_schema.py  0002_add_metric_search_index.py  0002_add_trgm_indexes.py  0003_metric_search_fields.py  0003_timestamptz.py  0004_add_dimension_search_indexes.py  0004_rebuild_metrics_schema.py  __init__.py
metrics-backend/app/: main.py
metrics-backend/app/analytics/: __init__.py  queries.py
metrics-backend/app/api/: cache.py
metrics-backend/app/core/: auth.py  config.py
metrics-backend/app/db/: helpers.py  postgres.py  schema.py  session.py
metrics-backend/docs/: README.md  explanation.md  how-to-guides.md  reference.md  tutorials.md  v1_dimensions.md  v1_dimensions_dimension_key.md  v1_dimensions_dimension_key_values.md  v1_metrics.md  v1_metrics_metric_key.md  v1_metrics_metric_key_availability.md  v1_metrics_metric_key_freshness.md  v1_query_aggregate.md  v1_query_latest.md  v1_query_timeseries.md  v1_query_topk.md
metrics-backend/scripts/: apply_alembic_sql.py  seed_metrics_data.py
visuals-backend/: .env.example  README.md  alembic.ini  pyproject.toml
visuals-backend/alembic/: __init__.py  env.py
visuals-backend/app/: __init__.py  main.py
visuals-backend/docs/: explanation.md  how-to-guides.md  reference.md  tutorials.md
(+90 files in other folders)
