[project]
name = "metric-killer-dashboarding-backend"
version = "0.1.0"
description = "Dashboarding backend for saving dashboard configs in Postgres"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["app"]

[tool.ruff]
line-length = 100
